- [CHANGED] - Removed ALT+W and CTRL+DEL shortcuts
- [CHANGED] - Removed New Contact and Save Contact from Logbook Main Menu
- Fixed Guantanamo KG4 Issue (issue #372)
- Fixed QRZ Lookup Not Including Full Name - History (issue #388)
- Fixed Spot Last QSO contains TX freq, should contain RX freq (issue #390)
- Fixed Spot Last QSO must contain Freq in kHz (issue #391)
- Fixed Malfunctioning tuning of WSJTX Alert spot

2024/06/07 - 0.36.0
- [NEW] - WSJTX: Added support to received ADIF QSO Log record
- [NEW] - Sat mode is derived from RX/TX Freq
- [NEW] - Logbook filters change color when enabled
- [NEW] - Frequency input boxes PageUp/Dn switches the band (issue #360)
- [NEW] - CTRL + PgUp/Dn switch band on the connected rig - global shortcut (issue #360)
- [NEW] - Added number of filtered QSOs (issue #374)
- Fixed Callbook query does not work (issue #377)
- Fixed Logbook columns are reordered after Delete (issue #383)
- Fixed Missing Republic of Kosovo flag (issue #384)

2024/05/21 - 0.35.2
- Improved delete performance; added delete progress bar (issue #351)
- Fixed Password with plus is incorrectly sent to online services (issue #366)
- Fixed Compilation issue under v4.6 (issue #368)
- Fixed Network Rig configuration is not saved (issue #370)

2024/05/06 - 0.35.1
- Fixed Free QRZ callbook - Name is not populating (issue #363)
- Fixed Incorrect CW segment freqs (issue #365)

2024/05/03 - 0.35.0
- [NEW] - Added Rot Interface PSTRotator Network
- [NEW] - Added QSO/QSL Since option to eQSL Dialog
- [NEW] - Bandmap - Current Mode segment visualisation
- [NEW] - CW Console - Added Word/Whole mode switch
- [NEW] - Added Callbook Profile Image Widget
- [NEW] - ASCII conversion based on Text-Unidecode/iconv algorithm (issue #316 #350)
- [NEW] - ITU/CQ Zones can be defined in Station Profile (issue #358)
- [CHANGED] - Spacebar is used as a focus changer for fields where space is not allowed
- [CHANGED] - Focus does not select text in the input fields